	future this have to be integrated in a ebox-wide option.
	+ Added flash MIME types to default MIME types
	+ Squid default cache_mem set to 128 MB
	+ New option to configure maximum_object_size which defaults to 300 MB
	+ Add refresh_pattern options for Microsoft Windows, Debian and Ubuntu
	updates
	+ Removed dead code in dumpConfig/restoreConfig methods
1.3.14
	+ Bugfix: in restartService we assure that all files are in place
	before restarting the daemons
	+ Changed labels in cache exemptions form 'domain' to 'domain name
	address' to make clearer the actual working of the feature
	+ Better help messages for time period parameters
	+ Added custom script to delay downtime while log rotation is done
	+ Only unzip domain categoris archives when they have changed,
	this speeds up the module startup
	+ You can establish the same policies for URLs than for full domains
1.3.13
	+ Switching antivirus from clamavscan to clamdscan
	+ Better MIME type check, removed false negatives with some subtypes
1.3.12
	+ Bug fix: Added migration to rename access table to squid_access.
	+ Add breadcrumbs
1.3.11
	+ Added report support
1.3.6
	+ Bug fix: Disable cache in Group Policy base to be able to fetch new groups in
	  "Group" select
	+ Bug fix: no more duplicated log for the same URL
	+ UI improvement: precondition in objects and user polices
1.3.5
	+ tableInfo returns an array of hash refs
	+ Bugfix: group policies are deleted when the group is deleted
	+ Bugfix: added notification when antivirus is enabled to assure
	that we have a correct configuration
1.1.30
	+ Added to Traffic details report _noAggregateFileds and fixed bug
	with defaultController
	+ Bugfix: HTTPS traffic tunneled correctly
1.1.20
	+ Disable PICs ratings by default
	+ logs are sesrchable by user
1.1.10
	+ Change default dansguardian conf to make it work with dansguardian 2.9.9.7
1.0
	+ new release
0.12.100
	+ New release
	+ Added user based authorization
	+ Added filter profiles
	+ Added group polices