@@ -24,6 +24,8 @@ HEAD
 	+ Add refresh_pattern options for Microsoft Windows, Debian and Ubuntu
 	updates
 	+ Removed dead code in dumpConfig/restoreConfig methods
+	+ In configuration report mode the module does not longe include
+	  the domain lists archives 
 1.3.14
 	+ Bugfix: in restartService we assure that all files are in place
 	before restarting the daemons
